--- a/docs/language_model/definitions/language/WordDefinitionNode.json
+++ b/docs/language_model/definitions/language/WordDefinitionNode.json
@@ -699,6 +699,18 @@
           "displayProperty": "Editable",
           "defaultValue": "",
           "renderingHints": "{ 'inputType': 'select', 'order': 40 }"
+        },
+        {
+          "propertyName": "theme",
+          "title": "Theme",
+          "description": "",
+          "category": "general",
+          "dataType": "Text",
+          "required": false,
+          "indexed": true,
+          "displayProperty": "Editable",
+          "defaultValue": "",
+          "renderingHints": "{ 'inputType': 'select', 'order': 41 }"
         }
       ],
       "inRelations": [
@@ -712,15 +724,15 @@
           ],
           "renderingHints": "{ 'order': 26 }"
         },
-         {
-          "relationName": "hasRhymingSound",
-          "title": "hasRhymingSound",
+        {
+          "relationName": "hasMember",
+          "objectTypes": [
+            "WordSet"
+          ],
+          "title": "words",
           "description": "",
           "required": false,
-          "objectTypes": [
-            "Phonetic_Boundary"
-          ],
-          "renderingHints": ""
+          "renderingHints": "{ 'order': 27 }"
         }
       ],
       "outRelations": [
@@ -773,36 +785,6 @@
             "Word"
           ],
           "renderingHints": "{ 'order': 26 }"
-        }, 
-		{
-          "relationName": "startsWithAkshara",
-          "title": "startsWithAkshara",
-          "description": "",
-          "required": false,
-          "objectTypes": [
-            "Phonetic_Boundary"
-          ],
-          "renderingHints": ""
-        },
-        {
-          "relationName": "endsWithAkshara",
-          "title": "endsWithAkshara",
-          "description": "",
-          "required": false,
-          "objectTypes": [
-            "Phonetic_Boundary"
-          ],
-          "renderingHints": ""
-        },
-        {
-          "relationName": "hasRhymingSound",
-          "title": "hasRhymingSound",
-          "description": "",
-          "required": false,
-          "objectTypes": [
-            "Phonetic_Boundary"
-          ],
-          "renderingHints": ""
         }
       ],
       "systemTags": [
@@ -825,7 +807,9 @@
       ],
       "metadata": {
         "ttl": 24,
-        "limit": 50
+        "limit": 50,
+        "weightages":"{\"10\": [\"category\", \"pos\"],\"15\": [\"theme\"],\"1\": [\"not_exists\"],\"5\": [\"exists\"],\"20\":\"lemma\",\"1\":\"default_weightage\"}",
+            "renderingHints": "{ 'inputType': 'textarea', 'order': 13 }"
       }
     }
   ]
