API to sync list of nodes by identifier

--- a/docs/language_model/definitions/language/WordDefinitionNode.json
+++ b/docs/language_model/definitions/language/WordDefinitionNode.json
@@ -729,7 +729,7 @@
           "objectTypes": [
             "WordSet"
           ],
-          "title": "words",
+          "title": "wordsets",
           "description": "",
           "required": false,
           "renderingHints": "{ 'order': 27 }"
