--- a/docs/language_model/definitions/language/VarnaDefinition.json
+++ b/docs/language_model/definitions/language/VarnaDefinition.json
@@ -38,10 +38,11 @@
             "range":
             [
                 "Vowel",
-				"VowelSign",
+				        "VowelSign",
                 "Consonant",
                 "Virama",
-                "Other"
+                "Other",
+                "Alphabet"
             ],
             "required": true,
 			"indexed": true,
