--- a/docs/language_model/definitions/language/WordDefinitionNode.json
+++ b/docs/language_model/definitions/language/WordDefinitionNode.json
@@ -502,7 +502,7 @@
             "required": false,
 			"indexed": true,
             "displayProperty": "Editable",
-            "defaultValue": "Draft",
+            "defaultValue": "Live",
             "renderingHints": "{'inputType': 'select', 'order': 27}"
         },
         {
