--- a/docs/language_model/definitions/language/WordDefinitionNode.json
+++ b/docs/language_model/definitions/language/WordDefinitionNode.json
@@ -311,8 +311,20 @@
           "title": "POS (Parts of Speech)",
           "description": "",
           "category": "grammar",
-          "dataType": "List",
-          "range": [],
+          "dataType": "Select",
+          "range":
+          [
+              "adjective",
+              "adjective satellite",
+              "pronoun",
+              "interjection",
+              "verb",
+              "preposition",
+              "noun",
+              "adverb",
+              "article",
+              "conjunction"
+          ],
           "required": false,
           "indexed": true,
           "displayProperty": "Editable",
