word definition update

--- a/docs/language_model/definitions/language/WordDefinitionNode.json
+++ b/docs/language_model/definitions/language/WordDefinitionNode.json
@@ -318,7 +318,7 @@
               "adjective",
               "adverb",
               "article",
-              "conjunction"
+              "conjunction",
               "interjection",
               "noun",
               "preposition",
