word definition change

--- a/docs/language_model/definitions/language/WordDefinitionNode.json
+++ b/docs/language_model/definitions/language/WordDefinitionNode.json
@@ -677,9 +677,13 @@
           "dataType": "Multi-Select",
           "range":
           [
-              "neutral",
-              "male",
-              "female"
+            "any",
+            "f",
+            "female",
+            "m",
+            "male",
+            "n",
+            "neutral"          
           ],
           "required": false,
           "indexed": true,
