Issue #1025 feat: get word and synset v3 API

--- a/docs/language_model/definitions/language/SynsetDefinition.json
+++ b/docs/language_model/definitions/language/SynsetDefinition.json
@@ -225,6 +225,19 @@
           "displayProperty": "Hidden",
           "defaultValue": "",
           "renderingHints": "{ 'inputType': 'text', 'order': 15 }"
+        },
+        {
+            "required": false,
+            "dataType": "JSON",
+            "propertyName": "words",
+            "title": "Words",
+            "description": "",
+            "category": "general",
+            "displayProperty": "Editable",
+            "defaultValue": "",
+            "renderingHints": "{ 'inputType': 'textarea', 'order': 16 }",
+            "indexed": true,
+            "draft": false
         }
       ],
       "inRelations": [
