Issue #1077 feat: themes added into word model

--- a/docs/language_model/definitions/language/WordDefinitionNode.json
+++ b/docs/language_model/definitions/language/WordDefinitionNode.json
@@ -789,6 +789,18 @@
           "displayProperty": "Readonly",
           "defaultValue": "",
           "renderingHints": "{ 'order': 44 }"
+        },
+        {
+          "propertyName": "themes",
+          "title": "Themes",
+          "description": "",
+          "category": "general",
+          "dataType": "List",
+          "required": false,
+          "displayProperty": "Editable",
+          "defaultValue": "",
+          "renderingHints": "{'inputType': 'table', 'order': 45}",
+          "indexed": true
         }
       ],
       "inRelations": [
